feat(tests): add invite link flow and pairing report UI

--- a/frontend/user/public/locales/en-US.json
+++ b/frontend/user/public/locales/en-US.json
@@ -92,6 +92,14 @@
     "dimensions": "dimensions",
     "submit": "See Results",
     "result_title": "Your Results",
+    "pair_invite_title": "Invite for Pairing",
+    "pair_invite_subtitle": "Share this link with a friend. Once they complete the same test, a pairing report is generated.",
+    "pair_copy": "Copy Link",
+    "pair_copied": "Copied",
+    "pair_result_title": "Pairing Report",
+    "pair_score": "Compatibility Score",
+    "pair_level": "Compatibility Level",
+    "pair_pending": "Waiting for your partner to finish the test.",
     "share": "Share Results",
     "back_to_list": "Back to List"
   },
