--- a/frontend/user/public/locales/zh-CN.json
+++ b/frontend/user/public/locales/zh-CN.json
@@ -92,6 +92,14 @@
     "dimensions": "维度",
     "submit": "查看结果",
     "result_title": "测试结果",
+    "pair_invite_title": "邀请好友互测",
+    "pair_invite_subtitle": "复制邀请链接给好友，好友完成同类测试后可生成匹配报告。",
+    "pair_copy": "复制链接",
+    "pair_copied": "已复制",
+    "pair_result_title": "匹配报告",
+    "pair_score": "匹配分",
+    "pair_level": "匹配等级",
+    "pair_pending": "等待对方完成测试后即可生成匹配结果。",
     "share": "分享结果",
     "back_to_list": "返回测试列表"
   },
