feat(tools): integrate guided meditation page with three local audio tracks

--- a/frontend/user/public/locales/en-US.json
+++ b/frontend/user/public/locales/en-US.json
@@ -188,6 +188,19 @@
     "mode_relax_desc": "The simplest rhythm, use anytime anywhere",
     "meditation_title": "Guided Meditation",
     "meditation_desc": "Guided mindfulness practice",
+    "meditation_page_title": "Guided Meditation Audio",
+    "meditation_page_subtitle": "Pick a guided session and follow the rhythm of breath and awareness.",
+    "meditation_local_audio_note": "Local meditation audio files are integrated and ready for playback.",
+    "meditation_now_playing": "Now Playing",
+    "meditation_log_failed": "Playback started, but session logging failed. Please retry later.",
+    "meditation_play_failed": "Unable to play audio. Please check audio permissions and retry.",
+    "meditation_track_calm_title": "Calm Reset (10 min)",
+    "meditation_track_calm_desc": "Release neck and shoulder tension with a gentle breathing reset.",
+    "meditation_track_focus_title": "Focus Grounding (15 min)",
+    "meditation_track_focus_desc": "Bring attention back to body sensations and reduce mental noise.",
+    "meditation_track_sleep_title": "Sleep Wind Down (20 min)",
+    "meditation_track_sleep_desc": "Slow your nervous system and transition into restful sleep.",
+    "back_to_tools": "Back to Tools",
     "start": "Start",
     "stop": "Stop",
     "minutes": "min",
