--- a/frontend/user/public/locales/zh-CN.json
+++ b/frontend/user/public/locales/zh-CN.json
@@ -188,6 +188,19 @@
     "mode_relax_desc": "最简单的节奏，随时随地可用",
     "meditation_title": "正念冥想",
     "meditation_desc": "引导式正念练习",
+    "meditation_page_title": "冥想引导音频",
+    "meditation_page_subtitle": "选择一段引导语，安静地跟随节奏呼吸与觉察。",
+    "meditation_local_audio_note": "已接入本地冥想音频文件，可离线缓存后直接播放。",
+    "meditation_now_playing": "正在播放",
+    "meditation_log_failed": "已开始播放，但记录会话失败，可稍后重试",
+    "meditation_play_failed": "播放失败，请检查设备音频权限或稍后重试",
+    "meditation_track_calm_title": "平静重置（10 分钟）",
+    "meditation_track_calm_desc": "温和放松肩颈与呼吸，快速降噪减压。",
+    "meditation_track_focus_title": "专注落地（15 分钟）",
+    "meditation_track_focus_desc": "把注意力带回身体感受，减少分心和内耗。",
+    "meditation_track_sleep_title": "睡前安抚（20 分钟）",
+    "meditation_track_sleep_desc": "降低夜间唤醒，帮助身心过渡到休息状态。",
+    "back_to_tools": "返回疗愈工具",
     "start": "开始",
     "stop": "停止",
     "minutes": "分钟",
