--- a/frontend/user/public/locales/zh-CN.json
+++ b/frontend/user/public/locales/zh-CN.json
@@ -376,6 +376,8 @@
   },
   "nd_disclaimer": {
     "title": "重要提示：本测试非临床诊断",
+    "legal_review_badge": "法律审核占位：待法务确认",
+    "legal_review_note": "合规文案最终版需经法律团队审核后发布（占位标记）。",
     "p1": "本测试基于心理学量表改编，旨在帮助你探索个人认知与行为特质，了解你的「大脑出厂设置」。",
     "p2": "MiMind 并非医疗机构。测试结果绝对不能作为 ADHD、自闭症谱系或其他任何神经发育障碍的临床诊断依据。",
     "p3": "结果仅供自我了解参考，不代表任何医学结论。",
