feat: add neuro brain-manual share cards with platform ratios

--- a/frontend/user/public/locales/en-US.json
+++ b/frontend/user/public/locales/en-US.json
@@ -341,6 +341,13 @@
     "dimension_chart": "Dimension Overview",
     "dimension_detail": "Dimension Breakdown",
     "interpretation": "Interpretation",
+    "share_title": "Share Your Brain Manual",
+    "share_subtitle": "Pick a platform ratio and generate your neurodiversity profile card.",
+    "share_download": "Download Card",
+    "share_native": "Share",
+    "share_preset_xiaohongshu": "Xiaohongshu 3:4",
+    "share_preset_instagram": "Instagram 1:1",
+    "share_preset_tiktok": "TikTok 9:16",
     "what_is_title": "What is Neurodiversity?",
     "what_is_body": "Neurodiversity recognizes that every brain operates uniquely. Differences in attention, social intuition, and sensory sensitivity are part of natural human variation — not deficits. Understanding your traits helps you work, socialize, and care for yourself more effectively.",
     "level_low": "Low trait expression",
