--- a/frontend/user/public/locales/zh-CN.json
+++ b/frontend/user/public/locales/zh-CN.json
@@ -341,6 +341,13 @@
     "dimension_chart": "维度分布",
     "dimension_detail": "各维度详情",
     "interpretation": "解读建议",
+    "share_title": "分享你的大脑说明书",
+    "share_subtitle": "选择平台尺寸，生成神经多样性特质图卡。",
+    "share_download": "下载图卡",
+    "share_native": "系统分享",
+    "share_preset_xiaohongshu": "小红书 3:4",
+    "share_preset_instagram": "Instagram 1:1",
+    "share_preset_tiktok": "TikTok 9:16",
     "what_is_title": "什么是神经多样性？",
     "what_is_body": "神经多样性（Neurodiversity）认为每个人的大脑都有独特的运作方式。注意力模式、社交直觉、感官敏感度等差异不是「缺陷」，而是多样性的一部分。了解自己的特质有助于更好地工作、社交和自我照顾。",
     "level_low": "特质不显著",
