--- a/frontend/user/public/locales/zh-CN.json
+++ b/frontend/user/public/locales/zh-CN.json
@@ -368,6 +368,11 @@
     "hsp_summary_low": "你的敏感度在一般范围内，外部刺激对你影响较小。你在嘈杂或刺激丰富的环境中可能比较自如。",
     "hsp_summary_moderate": "你表现出中等程度的高敏感特质。你可能对环境变化比较敏感，内心世界丰富。学习识别过度刺激的信号并适时休息会对你有帮助。",
     "hsp_summary_high": "你是一个高度敏感的人。你可能对声音、光线、情绪氛围都有更强的感知。这是一种与生俱来的气质，约 15-20% 的人口拥有。善用「感官急救包」和适当的独处时间来保护自己的能量。",
+    "catq_name": "社交面具与社交能量",
+    "catq_desc": "了解你在社交中为“适配环境”所投入的策略和能量消耗（基于 CAT-Q）",
+    "catq_summary_low": "你的结果显示你大多数时候可以较自然地表达自己，不太需要持续“伪装”来融入环境。整体社交耗能相对可控。",
+    "catq_summary_moderate": "你在不少场景会主动调整表达方式来维持社交顺畅。这是一种有用的适配能力，但也可能带来额外耗能。建议在高强度社交后安排恢复窗口。",
+    "catq_summary_high": "你的结果提示你在社交中投入了较高强度的“适配努力”（如掩饰、补偿、同化）。这并不代表你有问题，而是说明你长期在高负荷管理社交表现。建议优先建立低负担关系、减少连续社交时长，并为自己保留稳定的恢复时间。",
     "dim_inattention": "注意力分散",
     "dim_hyperactivity": "活跃度",
     "dim_impulsivity": "冲动性",
@@ -379,7 +384,10 @@
     "dim_excitation": "易激发性",
     "dim_aesthetic": "审美敏感",
     "dim_threshold": "感官阈值",
-    "dim_processing": "深度加工"
+    "dim_processing": "深度加工",
+    "dim_compensation": "补偿策略",
+    "dim_masking": "掩饰强度",
+    "dim_assimilation": "同化适配"
   },
   "nd_disclaimer": {
     "title": "重要提示：本测试非临床诊断",
