refactor(i18n): remove remaining language-branch literals in legal and journal pages

--- a/frontend/user/public/locales/en-US.json
+++ b/frontend/user/public/locales/en-US.json
@@ -237,6 +237,7 @@
     "note_label": "Notes",
     "note_placeholder": "What's the most noticeable feeling today?",
     "save": "Save",
+    "saved": "Entry saved",
     "trend_title": "7-Day Trend",
     "moods": {
       "calm": "Calm",
