--- a/frontend/user/public/locales/zh-CN.json
+++ b/frontend/user/public/locales/zh-CN.json
@@ -237,6 +237,7 @@
     "note_label": "写点什么",
     "note_placeholder": "今天最明显的感受是什么？",
     "save": "保存",
+    "saved": "日记已保存",
     "trend_title": "7 天趋势",
     "moods": {
       "calm": "平静",
