feat(tools): recover T-145 ambient mixer multi-select and per-track volume

--- a/frontend/user/public/locales/en-US.json
+++ b/frontend/user/public/locales/en-US.json
@@ -159,6 +159,15 @@
     "result_title": "Results",
     "score": "Score",
     "severity": "Severity",
+    "dim_somatization": "Somatic Discomfort",
+    "dim_obsessive_compulsive": "Obsessive or Compulsive Experiences",
+    "dim_interpersonal_sensitivity": "Interpersonal Sensitivity",
+    "dim_depression": "Depressive Mood",
+    "dim_anxiety": "Anxiety",
+    "dim_hostility": "Irritability or Hostility",
+    "dim_phobic_anxiety": "Phobic Anxiety",
+    "dim_paranoid_ideation": "Paranoid Thoughts",
+    "dim_psychoticism": "Detachment or Unusual Thinking",
     "paywall_title": "Unlock Full Assessment Reports",
     "paywall_subtitle": "Your current plan includes submissions only. Subscribe to view full score interpretation and insights.",
     "unlock_reports": "Upgrade to Unlock",
@@ -234,6 +243,7 @@
     "subtitle": "Relax and recharge anytime",
     "audio_title": "White Noise",
     "audio_desc": "Ambient sounds for focus and relaxation",
+    "audio_mix_hint": "You can combine multiple sounds and adjust each volume independently.",
     "sound_rain": "Rain",
     "sound_ocean": "Ocean",
     "sound_forest": "Forest",
@@ -272,6 +282,7 @@
     "stop": "Stop",
     "unlimited": "Unlimited",
     "minutes": "min",
+    "timer_unlimited": "∞",
     "cycles": "cycles",
     "inhale": "Inhale",
     "hold": "Hold",
