--- a/frontend/user/public/locales/zh-CN.json
+++ b/frontend/user/public/locales/zh-CN.json
@@ -159,6 +159,15 @@
     "result_title": "测评结果",
     "score": "得分",
     "severity": "程度",
+    "dim_somatization": "躯体化不适",
+    "dim_obsessive_compulsive": "强迫体验",
+    "dim_interpersonal_sensitivity": "人际敏感",
+    "dim_depression": "抑郁情绪",
+    "dim_anxiety": "焦虑体验",
+    "dim_hostility": "敌意或易怒",
+    "dim_phobic_anxiety": "恐惧焦虑",
+    "dim_paranoid_ideation": "偏执想法",
+    "dim_psychoticism": "疏离与非常规思维",
     "paywall_title": "解锁完整量表报告",
     "paywall_subtitle": "当前方案仅支持填写量表。订阅后可查看完整得分解读与趋势。",
     "unlock_reports": "去订阅解锁",
@@ -234,6 +243,7 @@
     "subtitle": "随时为你减压放松",
     "audio_title": "白噪音",
     "audio_desc": "环境音帮你专注放松",
+    "audio_mix_hint": "可多选叠加播放，先点选声音，再分别调节每个音量。",
     "sound_rain": "雨声",
     "sound_ocean": "海浪",
     "sound_forest": "森林",
@@ -272,6 +282,7 @@
     "stop": "停止",
     "unlimited": "不限",
     "minutes": "分钟",
+    "timer_unlimited": "不限",
     "cycles": "轮",
     "inhale": "吸气",
     "hold": "屏气",
